# Warehouse-Automation-with-Autonomous-Robots

./: CMakeLists.txt  README.md  package.xml
launch/: warehouse_full.launch.py
models/forklift/: model.config  model.sdf
models/robotic_arm/: model.config  model.sdf
models/tugbot/: model.config  model.sdf
warehouse_simulation/: gazebo_sim.py  standalone_sim.py  warehouse_manager.py
worlds/: warehouse.world
