<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_simulation</name>
  <version>5.0.0</version>
  <description>
    Warehouse Automation with Autonomous Robots — Gazebo Harmonic + ROS 2 Humble.
    Includes TugBot and Forklift SDF models, 5-DOF robotic arm, conveyor belt,
    A* pathfinding fleet manager, collision avoidance, and Flask/Three.js dashboard.
  </description>

  <maintainer email="sim@warehouse.local">Warehouse Sim</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS 2 runtime dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Gazebo Harmonic + ROS-GZ bridge -->
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_interfaces</depend>

  <!-- Navigation -->
  <depend>nav2_bringup</depend>
  <depend>nav2_msgs</depend>

  <!-- Python extras (installed via pip) -->
  <!-- flask flask-socketio eventlet -->

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
